--- a/005-05-09-2025/pato-01/css/siteStyle.css
+++ b/005-05-09-2025/pato-01/css/siteStyle.css
@@ -1,11 +1,20 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courgette&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+@font-face {
+    font-family: 'poppins';
+    src: url('../fonts/Poppins-Bold.ttf') format('truetype');
+}
 
 :root {    
-    --text-color: #333;
+    --text-color: #eee;
     --light-text-color: #777;
     --text-hover-color: #ec1d25;
+    --text-hover-color-transparent: #ec1d247c;
     --mainFont: 'Montserrat', sans-serif;
+    --secondaryFont: 'Courgette', cursive;
+    --titleFont: 'poppins', sans-serif;
 }
 
 
@@ -22,6 +31,7 @@ body {
     left: 0;
     position: fixed;
     border-top: 5px var(--text-hover-color) solid;
+    z-index: 1;
 }
 nav {
     width: 80%;
@@ -49,10 +59,142 @@ nav a {
     font-size: 14px;
     font-weight: 400;
     color: var(--text-color);
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
 }
 
 nav a:hover {
     color: var(--text-hover-color);
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
+}
+
+
+/* -------------------  main slider --------------------------- */
+
+#mainSlider {
+    width: 100%;
+    height: 100vh;
+    background: url('../img/photo-gallery-17.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+#menuBGGradient {
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3) 50%, rgba(0, 0, 0, 0.7));
+    position: relative;
+}
+
+#mainSliderTitles {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: var(--text-color);
+    text-align: center;
+    transform: translate(-50%, -50%);
+}
+
+#mainSliderTitles h2:nth-child(1) {
+    font-family: var(--secondaryFont);
+    font-size: 64px;
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+}
+#mainSliderTitles h2:nth-child(2) {
+    font-family: var(--titleFont);
+    text-transform: uppercase;
+    font-size: 96px;
+    word-spacing: 10px;
+    letter-spacing: 10px;
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+}
+
+#mainSliderTitles > div {
+    margin-top: 32px;
+}
+#mainSliderTitles a {
+    width: 135;
+    height: 40px;
+    background-color: var(--text-color);
+    color: var(--text-hover-color);
+    padding: 12px 32px;
+    font-size: 12px;
+    font-family: var(--mainFont);
+    text-transform: uppercase;
+    border-radius: 8px;
+    text-decoration: none;
+    margin-top: 20px;
+    transition: all 0.3s ease;
+}
+
+#mainSliderTitles a:hover {
+    background-color: var(--text-hover-color);
+    color: var(--text-color);
+    transition: all 0.3s ease;
+}
+
+#sliderDots {
+    position: absolute;
+    bottom: 48px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 16px;
+}
+
+#sliderDots div {
+    width: 12px;
+    height: 12px;
+    background-color: var(--light-text-color);
+    border-radius: 50%;
+    transition: all 0.3s ease;
+}
+
+#sliderDots .activeDot, #sliderDots div:hover {
+    cursor: pointer;
+    background-color: var(--text-hover-color);
+    border: 4px solid var(--text-color);
+    transition: all 0.3s ease;
+}
+
+.rightArrow, .leftArrow {
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    right: 32px;
+    transform: translateY(-50%);
+    font-size: 32px;
+    color: var(--text-color);
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 12px 12px;
+    width: 48px;
+    height: 48px;
+    text-align: center;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.rightArrow:hover, .leftArrow:hover {
+    background-color: var(--text-hover-color-transparent);
+    color: var(--text-color);
+    transition: all 0.3s ease;
+}
+
+.leftArrow {
+    left: 32px;
+    transform: scaleX(-1) translateY(-50%);
+}
+
+#mainSlider:hover .rightArrow, #mainSlider:hover .leftArrow {
+    opacity: 1;
+    transition: all 0.3s ease;
 }
